--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1.48.0", features = ["full"] }
+api = { path = "../api" }
+axum = "0.8.6"
