--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.6"
+tokio = { version = "1.48.0", features = ["full"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0"
+auth = { path = "../auth" }
+core = { path = "../core" }
+orm = { workspace = true }
