--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.6"
+axum = {version = "0.8.6", features = ["multipart"] }
 tokio = { version = "1.48.0", features = ["full"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0"
 auth = { path = "../auth" }
 core = { path = "../core" }
+storage = { path = "../storage" }
 orm = { workspace = true }
