--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -8,6 +8,7 @@ tokio = { version = "1.48.0", features = ["full"] }
 api = { path = "../api" }
 axum = "0.8.6"
 auth = { path = "../auth" }
+storage = { path = "../storage" }
 projectkit_core = { path = "../core", package = "core" }
 orm = { workspace = true }
 async-trait = "0.1.89"
